# llm-participants

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
simulate/: __init__.py  agent.py  lab.py  parallel.py  qsf.py  researcher.py  survey.py  utils.py
simulate/data/prompts/researcher/: default.json
simulate/personas/: ._gss_personas.csv  README.md  __init__.py  build_personas.py  build_us_personas.py  extract_attributes.py  gss_personas.csv  personas.json  prompts.json
tests/: test_qsf_recodes.py  test_survey_branch_recodes.py
trust/: 01_generate_trust_data.ipynb  01_generate_trust_data.py  02_compile_and_visualize_trust_results.ipynb  README.md  survey_trust_new.qsf
